# mini-hackathon-open-meteo

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
app/apps/: urls.py
app/apps/Trip/: admin.py  apps.py  models.py  serializers.py  signals.py  thread_functions.py  urls.py  views.py
app/apps/Trip/migrations/: 0001_initial.py
app/apps/Trip/templates/prompts/: checklist_clothes.txt  checklist_general.txt  day_prompt.txt  identity_prompt.txt  initial_prompt.txt  output_prompt.txt
app/configs/: settings.py  urls.py
frontend/: .eslintignore  .eslintrc.json  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  axiosInterceptor.ts  index.tsx
frontend/src/components/base/: Footer.tsx  Menu.tsx  Wrapper.tsx
frontend/src/pages/planner/: Planner.tsx
frontend/src/pages/tripDetails/: MarkdownRenderer.tsx  TripDetails.tsx  WeatherTable.tsx
nginx/: nginx.conf
